# mcp-doctor

./: .coveragerc  .gitignore  .release-please-config.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY_ANALYSIS_REPORT.md  SOCIAL_MEDIA_TEMPLATES.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  publish.yml  release-please.yml
docs/: README.md  llm-parameter-generation.md  token-efficiency-architecture.md  token-efficiency-arguments.md  tool-call-cache.md  troubleshooting-token-efficiency.md
scripts/: coverage.sh  format.sh  lint.sh
src/mcp_analyzer/: __init__.py  cli.py  config.py  dataset_generator.py  fastmcp_oauth_client.py  langsmith_uploader.py  mcp_client.py  mcp_sse_client.py  mcp_stdio_client.py  npx_launcher.py  reports.py  snyk_checker.py  snyk_extract.py  snyk_json.py  snyk_types.py  tool_utils.py  utils.py
src/mcp_analyzer/checkers/: __init__.py  descriptions.py  security.py  token_efficiency.py  token_efficiency_models.py  tool_call_cache.py
tests/: test_cli.py  test_cli_oauth_and_cache.py  test_cli_snyk.py  test_dataset_generator.py  test_descriptions.py  test_fastmcp_oauth_client.py  test_langsmith_uploader.py  test_npx_launcher.py  test_reports.py  test_security_checker.py  test_snyk_checker.py  test_token_efficiency.py  test_token_efficiency_models.py  test_tool_utils.py
