[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-doctor"
version = "0.1.0"
description = "🩺 A diagnostic tool for MCP servers - analyze agent-friendliness, debug issues, and ensure best practices compliance"
readme = "README.md"
authors = [
    {name = "Destilabs", email = "mykhailo.kushnir@destilabs.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-doctor = "mcp_analyzer.cli:app"

[project.urls]
Homepage = "https://github.com/destilabs/mcp-doctor"
Repository = "https://github.com/destilabs/mcp-doctor"
Issues = "https://github.com/destilabs/mcp-doctor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_analyzer"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
